--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             
             // Draw creator credit
             ctx.font = '16px Arial';
-            ctx.fillText("by Sophie Odes Keidar", canvas.width / 2, 60);
+            ctx.fillText("by SOK", canvas.width / 2, 60);
             
             if (gameWon) {
                 ctx.fillStyle = 'rgba(0, 0, 0, 0.7)';
